fix pwa layout on ios.

--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -132,20 +132,13 @@
 
   body {
     @apply bg-background text-foreground;
-    height: 100vh;
 
-    padding: env(safe-area-inset-top) env(safe-area-inset-right)
-      env(safe-area-inset-bottom) env(safe-area-inset-left);
+    height: calc(100dvh - env(safe-area-inset-top));
+    min-height: calc(100dvh - env(safe-area-inset-top));
+    max-height: calc(100dvh - env(safe-area-inset-top));
 
-    /* mobile viewport bug fix */
-    /* https://allthingssmitty.com/2020/05/11/css-fix-for-100vh-in-mobile-webkit/ */
-    min-height: 100vh;
-    min-height: -moz-available; /* WebKit-based browsers will ignore this. */
-    min-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-
-    max-height: 100vh;
-    max-height: -moz-available;
-    max-height: -webkit-fill-available;
+    margin-top: env(safe-area-inset-top);
+    /*padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);*/
   }
 
   html {
